--- a/esphome-canbus.yaml
+++ b/esphome-canbus.yaml
@@ -6,11 +6,11 @@ substitutions:
 esphome:
   name: ${name}
   friendly_name: ${friendly_name}
-  min_version: 2024.6.0 # Or your current ESPHome version
+  min_version: 2024.6.0
   name_add_mac_suffix: false
   project:
-    name: esphome.web # Or your project name
-    version: dev       # Or your version
+    name: esphome.web
+    version: dev
 
 esp32:
   board: esp32dev
@@ -25,47 +25,32 @@ time:
     id: homeassistant_time
 
 api:
-  # Add your API configuration here if needed
-
 ota:
   - platform: esphome
-  # password: !secret ota_password
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
-captive_portal:
-  # Enable if you want a fallback AP if WiFi connection fails
-
-dashboard_import:
-  package_import_url: github://esphome/example-configs/esphome-web/esp32.yaml@main
-  import_full_config: true
-
 web_server:
-  # port: 80 # Uncomment to enable web server
 
 # Defines the physical LED output
 output:
   - platform: gpio
     pin: ${builtin_led_pin}
     id: builtin_led_output
-    inverted: true # Common for onboard LEDs. Adjust if your LED is active HIGH.
+    inverted: true
 
-# Template switch to handle the LED flashing
-switch:
-  - platform: template
-    id: led_flasher_template_switch # ID for this template switch
-    name: "CAN Rx LED Pulse"        # Optional: Name for Home Assistant UI if not internal
-    internal: true                  # Set to true as we only trigger it internally
-    icon: "mdi:led-on"
-    # This switch is optimistic because its state is managed by its actions.
-    optimistic: true 
-    turn_on_action: # When this template switch is turned ON by a CAN frame
-      - output.turn_on: builtin_led_output  # Turn the actual LED on
-      - delay: 50ms                         # Keep LED on for this duration
-      - output.turn_off: builtin_led_output # Turn the actual LED off
-      - switch.turn_off: led_flasher_template_switch # Turn this template switch itself off, ready for next pulse
+# Non-blocking script to handle the LED flashing
+script:
+  - id: flash_can_led
+    mode: restart
+    then:
+      - lambda: |-
+          id(builtin_led_output)->turn_on();
+          App.scheduler.set_timeout(id(builtin_led_output), "led_off_timer", 50, [] {
+            id(builtin_led_output)->turn_off();
+          });
 
 canbus:
   - platform: esp32_can
@@ -73,14 +58,14 @@ canbus:
     tx_pin: GPIO01
     rx_pin: GPIO03
     bit_rate: 50kbps
-    use_extended_id: true 
-    can_id: 0x0           
+    use_extended_id: true
+    can_id: 0x0
     on_frame:
       # Throttle_Position (ID:0x04394100)
       - can_id: 0x04394100
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 4) {
                 uint16_t throttle_raw = x[3];
@@ -88,35 +73,32 @@ canbus:
                 id(throttle_position).publish_state(throttle_position_percent);
               }
 
-      # Doors, Headlights, Hazard Lights (ID:0x06214000)
+      # Doors, Hazard Lights (ID:0x06214000)
       - can_id: 0x06214000
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
-              if (x.size() >= 3) { 
-                const char *TAG = "can_0x06214000"; 
+              if (x.size() >= 3) {
+                const char *TAG = "can_0x06214000";
                 bool rear_sliding_door_open = (x[1] & 0x30) == 0x30;
                 id(RearSlidingDoor_Status).publish_state(rear_sliding_door_open);
                 ESP_LOGI(TAG, "RearSlidingDoor: %s (Byte1 data: 0x%02X)", rear_sliding_door_open ? "OPEN" : "CLOSED", x[1]);
                 bool rear_doors_open = (x[1] & 0x40) == 0x40;
                 id(RearDoors_Status).publish_state(rear_doors_open);
                 ESP_LOGI(TAG, "RearDoors: %s (Byte1 data: 0x%02X)", rear_doors_open ? "OPEN" : "CLOSED", x[1]);
-                bool headlights_on = (x[1] & 0x68) == 0x68;
-                id(Headlights_Status).publish_state(headlights_on);
-                ESP_LOGI(TAG, "Headlights: %s (Byte1 data: 0x%02X)", headlights_on ? "ON" : "OFF", x[1]);
                 bool hazard_lights_on = (x[2] & 0x60) == 0x60;
                 id(HazardLights_Status).publish_state(hazard_lights_on);
                 ESP_LOGI(TAG, "HazardLights: %s (Byte2 data: 0x%02X)", hazard_lights_on ? "ON" : "OFF", x[2]);
               } else {
-                ESP_LOGW("can_0x06214000", "Frame 0x06214000 too short, size: %d. Expected at least 3 bytes.", x.size());
+                ESP_LOGW("can_0x06214000", "Frame 0x06214000 too short, size: %d.", x.size());
               }
 
       # Key Fob (ID:0x02294000)
       - can_id: 0x02294000
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 7) {
                 bool fob_lock_pressed = (x[5] & 0x80) == 0x80;
@@ -137,7 +119,7 @@ canbus:
       - can_id: 0x06284000
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 2) {
                 id(Media_Volume_Up_Button).publish_state((x[0] & 0x80) == 0x80);
@@ -150,34 +132,38 @@ canbus:
                 id(Media_Phone_Hangup_Button).publish_state((x[0] & 0x01) == 0x01);
               }
 
-      # Indicators & Brake Pedal (ID:0x02214000)
+      # Indicators, Brake Pedal & Headlights (ID:0x02214000)
       - can_id: 0x02214000
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 3) {
+                const char *TAG = "can_0x02214000";
                 id(Indicator_Left).publish_state((x[2] & 0x40) == 0x40);
                 id(Indicator_Right).publish_state((x[2] & 0x20) == 0x20);
                 id(brake_pedal).publish_state((x[0] & 0x80) == 0x80);
+                bool headlights_on = (x[1] & 0x68) == 0x68;
+                id(Headlights_Status).publish_state(headlights_on);
+                ESP_LOGI(TAG, "Headlights: %s (Byte1 data: 0x%02X)", headlights_on ? "ON" : "OFF", x[1]);
               }
 
       # Parking Brake & Ignition (ID:0x06314003)
       - can_id: 0x06314003
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 7) {
                 id(parking_brake).publish_state((x[0] & 0x20) == 0x20);
                 id(ignition_on).publish_state((x[6] & 0x40) == 0x40);
               }
 
-      # Date & Time (ID:0x0C214003) - This is for DISPLAYING time from CAN
+      # Date & Time (ID:0x0C214003)
       - can_id: 0x0C214003
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 6) {
                 char date_str[11];
@@ -186,103 +172,78 @@ canbus:
                 snprintf(time_str, sizeof(time_str), "%02X:%02X", x[0], x[1]);
                 id(can_bus_date).publish_state(date_str);
                 id(can_bus_time).publish_state(time_str);
-                // Add logging here
                 ESP_LOGD("can_bus_datetime", "Received CAN Date: %s, Time: %s", date_str, time_str);
               } else {
-                ESP_LOGW("can_bus_datetime", "CAN Date/Time message too short. Expected at least 6 bytes, got %zu", x.size());
+                ESP_LOGW("can_bus_datetime", "CAN Date/Time message too short. Got %zu bytes.", x.size());
               }
 
       # Exterior Temp (ID:0x063d4000)
       - can_id: 0x063d4000
         use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch 
+          - script.execute: flash_can_led
           - lambda: |-
               if (x.size() >= 1) {
                 uint8_t exterior_temp_raw = x[0];
                 float exterior_temp_celsius = (float)exterior_temp_raw - 84.0f;
                 id(exterior_temp).publish_state(exterior_temp_celsius);
               }
-      
-      # VIN Number (ID: 0x03254000) - Assuming multi-frame
+
+      # VIN Number (ID: 0x03254000)
       - can_id: 0x03254000
-        use_extended_id: true # Assuming extended ID. Verify if standard for your vehicle.
+        use_extended_id: true
         then:
-          - switch.turn_on: led_flasher_template_switch # Optional: Flash LED on any VIN frame part
+          - script.execute: flash_can_led
           - lambda: |-
-              static char vin_str_buffer[18]; // 17 chars for VIN + 1 null terminator
+              static char vin_str_buffer[18];
               static uint8_t vin_bytes_collected = 0;
               static uint32_t last_vin_frame_millis = 0;
-              const uint32_t VIN_FRAME_PART_TIMEOUT_MS = 2000; // 2 second timeout between parts
+              // CORRECTED: Increased timeout to 15 seconds
+              const uint32_t VIN_FRAME_PART_TIMEOUT_MS = 15000;
               const char *TAG = "vin_decoder";
 
               if (x.empty()) {
                 ESP_LOGW(TAG, "ID 0x03254000: Received empty frame.");
                 return;
               }
-
               uint32_t current_millis = millis();
-
-              // Log raw frame data for debugging
-              std::string raw_hex_data_str;
-              for (uint8_t byte : x) {
-                char byte_hex[4];
-                sprintf(byte_hex, "%02X ", byte);
-                raw_hex_data_str += byte_hex;
-              }
-              ESP_LOGD(TAG, "ID 0x03254000: Raw Frame (Size %d): Data: %s", x.size(), raw_hex_data_str.c_str());
-
-              // Timeout logic: if too much time has passed since the last VIN frame part, reset.
+              
               if (vin_bytes_collected > 0 && (current_millis - last_vin_frame_millis > VIN_FRAME_PART_TIMEOUT_MS)) {
                 ESP_LOGW(TAG, "Timeout! Resetting VIN buffer (had %d bytes collected).", vin_bytes_collected);
-                vin_bytes_collected = 0; // Reset on timeout
-              }
-              
-              bool is_new_sequence = false;
-              if (vin_bytes_collected == 0) {
-                memset(vin_str_buffer, 0, sizeof(vin_str_buffer)); // Clear buffer
-                ESP_LOGD(TAG, "Starting new VIN collection. Assuming VIN data starts from 2nd byte (index 1) of frames.");
-                is_new_sequence = true;
+                vin_bytes_collected = 0;
               }
 
-              // Only proceed if the frame has more than just a control byte (i.e., x.size() > 1)
-              // and we are in a collection sequence or just started one.
-              if (x.size() > 1 && (is_new_sequence || vin_bytes_collected > 0)) {
-                ESP_LOGD(TAG, "Appending to VIN buffer (current length %d from %d data bytes in frame):", vin_bytes_collected, x.size() -1);
-                // Assume VIN characters start from x[1] (skipping x[0] as potential control/sequence byte)
-                for (size_t i = 1; i < x.size(); ++i) { 
-                  if (vin_bytes_collected < 17) { 
+              if (vin_bytes_collected == 0) {
+                memset(vin_str_buffer, 0, sizeof(vin_str_buffer));
+              }
+
+              if (x.size() > 1) {
+                for (size_t i = 1; i < x.size(); ++i) {
+                  if (vin_bytes_collected < 17) {
                     char ch = (char)x[i];
-                    if (isprint(ch)) { // Only add printable ASCII characters
+                    if (isprint(ch)) {
                       vin_str_buffer[vin_bytes_collected] = ch;
-                      ESP_LOGD(TAG, "  Adding char: '%c' (0x%02X) from frame_byte[%d] to vin_buffer[%d]", ch, x[i], i, vin_bytes_collected);
                       vin_bytes_collected++;
-                    } else {
-                      ESP_LOGW(TAG, "  Skipping non-printable char: 0x%02X from frame_byte[%d]", x[i], i);
                     }
-                  } else {
-                    break; // VIN buffer full
                   }
                 }
-              } else if (x.size() <= 1 && (is_new_sequence || vin_bytes_collected > 0) ) {
-                 ESP_LOGW(TAG, "Frame too short (size %d) to contain data beyond a potential control byte.", x.size());
               }
               
-              last_vin_frame_millis = current_millis; // Update timestamp of last received part
+              last_vin_frame_millis = current_millis;
 
               if (vin_bytes_collected >= 17) {
-                vin_str_buffer[17] = '\0'; // Ensure null termination for the 17-character VIN
+                vin_str_buffer[17] = '\0';
                 id(vehicle_vin).publish_state(vin_str_buffer);
-                ESP_LOGI(TAG, "Full VIN candidate collected and published: '%s'", vin_str_buffer);
-                vin_bytes_collected = 0; 
+                ESP_LOGI(TAG, "Full VIN collected and published: '%s'", vin_str_buffer);
+                vin_bytes_collected = 0;
               }
-
 sensor:
   - platform: wifi_signal
     name: "WiFi Signal dB"
     id: wifi_signal_db
     update_interval: 60s
     entity_category: "diagnostic"
+    unit_of_measurement: "dB"
 
   - platform: copy
     source_id: wifi_signal_db
@@ -317,7 +278,7 @@ sensor:
     unit_of_measurement: "%"
     accuracy_decimals: 1
     icon: "mdi:angle-acute"
-  
+
   - platform: template
     name: "Vehicle Speed"
     id: Vehicle_Speed
@@ -392,11 +353,11 @@ binary_sensor:
   - platform: template
     name: "Fob Unlock RearDoors Button"
     id: Fob_Unlock_RearDoors_Button
-  
+
   - platform: template
     name: "Fob Lock Doors Button"
     id: Fob_Lock_Doors_Button
-    
+
   - platform: template
     name: "Fob DeadLock Doors Button"
     id: Fob_Deadlock_Doors_Button
@@ -408,11 +369,11 @@ binary_sensor:
   - platform: template
     name: "Media Volume Down Button"
     id: Media_Volume_Down_Button
-  
+
   - platform: template
     name: "Media Mute Button"
     id: Media_Mute_Button
-  
+
   - platform: template
     name: "Media Talk Button"
     id: Media_Talk_Button
@@ -478,8 +439,8 @@ text_sensor:
     name: "CAN Bus Date"
     id: can_bus_date
     icon: "mdi:calendar"
-  
-  - platform: template # New text_sensor for VIN
+
+  - platform: template
     name: "Vehicle VIN"
     id: vehicle_vin
     icon: "mdi:car-info"
@@ -518,31 +479,21 @@ button:
             };
             auto time_val = id(homeassistant_time).now();
             if (!time_val.is_valid()) {
-              ESP_LOGW("canbus_sync_time", "Home Assistant time not available for CAN sync.");
+              ESP_LOGW("canbus_sync_time", "Home Assistant time not available.");
               return;
             }
-            ESP_LOGI("canbus_sync_time", "Attempting to sync time. HA time: %02d:%02d %02d/%02d/%04d",
-                       time_val.hour, time_val.minute, time_val.day_of_month, time_val.month, time_val.year);
             uint8_t hour_bcd = dec_to_bcd(time_val.hour);
             uint8_t minute_bcd = dec_to_bcd(time_val.minute);
             uint8_t day_bcd = dec_to_bcd(time_val.day_of_month);
             uint8_t month_bcd = dec_to_bcd(time_val.month);
             uint8_t year_of_century = time_val.year % 100;
             uint8_t century = time_val.year / 100;
-            uint8_t year_high_bcd = dec_to_bcd(century); 
+            uint8_t year_high_bcd = dec_to_bcd(century);
             uint8_t year_low_bcd = dec_to_bcd(year_of_century);
-            ESP_LOGI("canbus_sync_time", "Calculated BCD values: H=0x%02X, M=0x%02X, D=0x%02X, m=0x%02X, YH=0x%02X, YL=0x%02X",
-                       hour_bcd, minute_bcd, day_bcd, month_bcd, year_high_bcd, year_low_bcd);
+            
             uint8_t data_payload[] = {
               hour_bcd, minute_bcd, day_bcd, month_bcd, year_high_bcd, year_low_bcd
             };
-            uint32_t can_id_val = 0x0C214024; 
-            bool is_extended_frame = true;
-            bool is_rtr_frame = false;
-            ESP_LOGI("canbus_sync_time", "Sending to CAN ID 0x%08X. Payload (6 bytes): %02X %02X %02X %02X %02X %02X",
-                       can_id_val,
-                       data_payload[0], data_payload[1], data_payload[2],
-                       data_payload[3], data_payload[4], data_payload[5]);
-            id(my_canbus).send_data(can_id_val, is_extended_frame, is_rtr_frame, std::vector<unsigned char>(data_payload, data_payload + sizeof(data_payload)));
+            
+            id(my_canbus).send_data(0x0C214024, true, false, std::vector<unsigned char>(data_payload, data_payload + sizeof(data_payload)));
             ESP_LOGI("canbus_sync_time", "Time sync CAN frame sent.");
-
